Refactor stats and analyzer type safety